--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "ownerNumber": ["6289517185039@s.whatsapp.net","6289517185039@s.whatsapp.net"],
+    "ownerNumber": ["+2348139398272@s.whatsapp.net","+2348139398272@s.whatsapp.net"],
     "ownerName": "Call Me Zaa🐧",
-    "instagram" : "https://instagram.com/nicetry.zaa._",
-    "botName": "Pizzaa🐧-Mdོ ",
+    "instagram" : "https://instagram.com/fideltrumpet",
+    "botName": "Fideltrumpet_Bot ",
     "footer": "api.zeeoneofc.xyz",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
